Fifth commit. Added content/snippets/index.md

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ You will find here Docs and Blog Posts with hopefully valuable information.">
 <link rel="canonical" href="http://localhost:1313/">
 <link rel="stylesheet" href="/book.min.27c601ff251cc5c9796bb272aace960013cf351d0c28a7e1301487b32d4800ee.css" integrity="sha256-J8YB/yUcxcl5a7Jyqs6WABPPNR0MKKfhMBSHsy1IAO4=" crossorigin="anonymous">
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.7d64ea1f1783486d702dd46ef30683b6cad311e9d0476f725f6d1f93967ecd16.js" integrity="sha256-fWTqHxeDSG1wLdRu8waDtsrTEenQR29yX20fk5Z&#43;zRY=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.a1c12fa109adc5593c553240855220809c348029edc5d3bdbd549e1fbff6c97c.js" integrity="sha256-ocEvoQmtxVk8VTJAhVIggJw0gCntxdO9vVSeH7/2yXw=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="My New Hugo Site" />
 <!--
 Made with Book Theme
@@ -195,6 +195,12 @@ https://github.com/alex-shpak/hugo-book
   <li>
     <a href="/posts/"  >
         Blog
+      </a>
+  </li>
+  
+  <li>
+    <a href="/snippets/"  >
+        Snippets
       </a>
   </li>
   
